jQuery no longer render-blocking, start converting jQ to vanilla JS
Lighthouse Benchmarks:
            Load  Interactive
This commit 1.7s  4.5s
master      5.0s  5.6s

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,6 @@
 }
 
 #hint {
-    display: none;
     margin-top: 8px;
 }
 
@@ -112,6 +111,10 @@ td {
 
 .pagination {
     overflow-x: auto;
+}
+
+.hidden {
+    display: none;
 }
 
 /****************** COLOURS **********************************/
