--- a/templates/admin/submissions.html
+++ b/templates/admin/submissions.html
@@ -72,6 +72,8 @@
         </form>
     </div>
 </div>
+{% endblock %}
+{% block script %}
 <script>
     var queryStrings = new URL(window.location.href).searchParams;
     if (queryStrings.get("username") != false) $("form #username").attr("value", queryStrings.get("username"));
