--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -46,6 +46,8 @@
         </tbody>
     </table>
 </div>
+{% endblock %}
+{% block script %}
 <script>
     function createForm(msg, path, user_id) {
         $("#confirm").css("display", "");
