--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,8 @@
     </div>
 {% endfor %}
 <div id="pagination"></div>
+{% endblock %}
+{% block script %}
 <script>
     function deletemsg(e) {
         var id = $(e).attr("aid");
