--- a/templates/admin/editannouncement.html
+++ b/templates/admin/editannouncement.html
@@ -13,16 +13,16 @@
     <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Edit">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
+{% endblock %}
+{% block script %}
 <script>
-    $(() => {
-        var product = converter.makeHtml(document.getElementById('description').value);
-        $('#description-out').html(product);
-        $('#description').css('height', $('#description-out').css('height'));
-    });
+    var product = converter.makeHtml(document.getElementById('description').value);
+    document.getElementById('description-out').innerHTML = product;
+    $('#description').css('height', $('#description-out').css('height'));
 
     $('#description').bind('input propertychange', function() {
         var product = converter.makeHtml(this.value);
-        $('#description-out').html(product);
+        document.getElementById('description-out').innerHTML = product;
         $('#description').css('height', $('#description-out').css('height'));
     });
 </script>
