--- a/templates/admin/editcontest.html
+++ b/templates/admin/editcontest.html
@@ -15,29 +15,29 @@
     <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Edit">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
+{% endblock %}
+{% block script %}
 <script>
-    $(() => {
-        var product = converter.makeHtml(document.getElementById('description').value);
-        $('#description-out').html(product);
-        $('#description').css('height', $('#description-out').css('height'));
+    var product = converter.makeHtml(document.getElementById('description').value);
+    document.getElementById('description-out').innerHTML = product;
+    $('#description').css('height', $('#description-out').css('height'));
 
-        document.querySelectorAll(".dtl").forEach(function (e) {
-            var split = e.getAttribute("value").split(" ");
-            var date_split = split[0].split("-");
-            var final = date_split[1] + "/" + date_split[2] + "/" + date_split[0] + " " + split[1];
-            var parsed = new Date(final + " UTC").toString().split(" ");
-            e.value = parsed[3] + "-" + getMonthFromString(parsed[1]) + "-" + parsed[2] + "T" + parsed[4];
+    document.querySelectorAll(".dtl").forEach(function (e) {
+        var split = e.getAttribute("value").split(" ");
+        var date_split = split[0].split("-");
+        var final = date_split[1] + "/" + date_split[2] + "/" + date_split[0] + " " + split[1];
+        var parsed = new Date(final + " UTC").toString().split(" ");
+        e.value = parsed[3] + "-" + getMonthFromString(parsed[1]) + "-" + parsed[2] + "T" + parsed[4];
 
-            function getMonthFromString(mon){
-                var str = (new Date(Date.parse(mon +" 1, 2012")).getMonth() + 1).toString();
-                return str.length == 2 ? str : "0" + str;
-            }
-        });
+        function getMonthFromString(mon) {
+            var str = (new Date(Date.parse(mon +" 1, 2012")).getMonth() + 1).toString();
+            return str.length == 2 ? str : "0" + str;
+        }
     });
 
     $('#description').bind('input propertychange', function() {
         var product = converter.makeHtml(this.value);
-        $('#description-out').html(product);
+        document.getElementById('description-out').innerHTML = product;
         $('#description').css('height', $('#description-out').css('height'));
     });
 
