--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,8 +8,6 @@
         <link href="/assets/css/github-markdown.min.css" rel="stylesheet" media="async" onload="this.media='all'">
         <link href="/assets/css/style.css" rel="stylesheet">
 
-        <script src="/assets/js/jquery.min.js"></script>
-
         <link href="/static/favicon.png" rel="icon">
 
         <title>{% block title %}{% endblock %} | {{ CLUB_NAME }}</title>
@@ -65,14 +63,16 @@
             <p class="text-center">© 2020, {{ CLUB_NAME }}. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
         </footer>
 
-
-        <script src="/assets/js/bootstrap.bundle.min.js"></script>
+        <!-- TODO: Remove jQuery -->
+        <script src="/assets/js/jquery.min.js"></script>
         <script src="/assets/js/showdown.min.js"></script>
         <script src="/assets/js/purify.min.js"></script>
+        <script src="/assets/js/bootstrap.bundle.min.js"></script>
+        <script src="/assets/js/jquery.twbsPagination.min.js"></script>
         <script src="/assets/js/convertmd.js"></script>
+        {% block script %}{% endblock %}
         <script src="/assets/js/dateconvert.js"></script>
         <script src="/assets/js/seemore.js"></script>
-        <script src="/assets/js/jquery.twbsPagination.min.js"></script>
         <script src="/assets/js/pagination.js"></script>
     </body>
 </html>
