--- a/templates/problem/editeditorial.html
+++ b/templates/problem/editeditorial.html
@@ -12,16 +12,16 @@
     <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Submit">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
+{% endblock %}
+{% block script %}
 <script>
-    $(() => {
-        var product = converter.makeHtml(document.getElementById('editorial').value);
-        $('#editorial-out').html(product);
-        $('#editorial').css('height', $('#editorial-out').css('height'));
-    });
+    var product = converter.makeHtml(document.getElementById('editorial').value);
+    document.getElementById('editorial-out').innerHTML = product;
+    $('#editorial').css('height', $('#editorial-out').css('height'));
     
     $('#editorial').bind('input propertychange', function() {
         var product = converter.makeHtml(this.value);
-        $('#editorial-out').html(product);
+        document.getElementById('editorial-out').innerHTML = product;
         $('#editorial').css('height', $('#editorial-out').css('height'));
     });
 </script>
