Update bootstrap to 5.0.0

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,10 @@ td {
     display: none;
 }
 
+a {
+    text-decoration: none;
+}
+
 /****************** COLOURS **********************************/
 .white {
     color: #ffffff!important;
