--- a/templates/admin/createproblem.html
+++ b/templates/admin/createproblem.html
@@ -5,21 +5,21 @@
 {% block main %}
 <h1>Create Problem</h1>
 <form autocomplete="off" method="post" id="create" name="create" enctype=multipart/form-data>
-    <input class="form-control form-group" type="text" id="id" name="id" placeholder="ID" required>
-    <input class="form-control form-group" type="text" id="name" name="name" placeholder="Name" required>
+    <input class="form-control mb-3" type="text" id="id" name="id" placeholder="ID" required>
+    <input class="form-control mb-3" type="text" id="name" name="name" placeholder="Name" required>
     <div style="position: relative;">
-        <textarea class="form-control form-group md-preview" id="description" name="description" rows="20" placeholder="Description" required></textarea>
+        <textarea class="form-control mb-3 md-preview" id="description" name="description" rows="20" placeholder="Description" required></textarea>
         <div id="description-out" class="md-preview"></div>
     </div>
     <div style="position: relative;">
-        <textarea class="form-control form-group md-preview" id="hints" name="hints" rows="20" placeholder="Hints"></textarea>
+        <textarea class="form-control mb-3 md-preview" id="hints" name="hints" rows="20" placeholder="Hints"></textarea>
         <div id="hints-out" class="md-preview"></div>
     </div>
-    <input class="form-control form-group" type="number" id="point_value" name="point_value" placeholder="Point Value" required>
-    <input class="form-control form-group" type="text" id="category" name="category" placeholder="Category" required>
-    <input class="form-control form-group" type="text" id="flag" name="flag" placeholder="Flag" required>
-    <input class="form-control form-group" type="file" id="file" name="file" accept=".zip" style="border: 0;">
-    <div class="form-control form-group" style="border: 0;">
+    <input class="form-control mb-3" type="number" id="point_value" name="point_value" placeholder="Point Value" required>
+    <input class="form-control mb-3" type="text" id="category" name="category" placeholder="Category" required>
+    <input class="form-control mb-3" type="text" id="flag" name="flag" placeholder="Flag" required>
+    <input class="form-control mb-3" type="file" id="file" name="file" accept=".zip">
+    <div class="form-control mb-3" style="border: 0;">
         <input type="checkbox" id="draft" name="draft">
         <label for="draft">Draft?</label>
     </div>
