--- a/templates/admin/submissions.html
+++ b/templates/admin/submissions.html
@@ -8,7 +8,7 @@
 <div class="flex">
     <div style="flex: 3; overflow-x: auto;">
         <table class="table table-hover table-full-width">
-            <thead class="thead-dark">
+            <thead class="table-dark">
                 <tr>
                     <th scope="col" style="width: 10%;">ID</th>
                     <th scope="col" style="width: 20%;">Time</th>
@@ -41,10 +41,10 @@
         <div class="card">
             <h3>Filter Submissions</h3>
             <form>
-                <input class="form-control form-group" type="text" id="username" name="username" placeholder="Filter by username">
-                <input class="form-control form-group" type="text" id="problem_id" name="problem_id" placeholder="Filter by problem ID">
-                <input class="form-control form-group" type="text" id="contest_id" name="contest_id" placeholder="Filter by contest ID">
-                <select class="form-control form-group" id="correct" name="correct">
+                <input class="form-control mb-3" type="text" id="username" name="username" placeholder="Filter by username">
+                <input class="form-control mb-3" type="text" id="problem_id" name="problem_id" placeholder="Filter by problem ID">
+                <input class="form-control mb-3" type="text" id="contest_id" name="contest_id" placeholder="Filter by contest ID">
+                <select class="form-control mb-3" id="correct" name="correct">
                     <option value="" selected hidden>Filter by status</option>
                     <option value="">All</option>
                     <option value="AC">AC</option>
@@ -59,10 +59,10 @@
     <div class="card">
         <h3>Filter Submissions</h3>
         <form>
-            <input class="form-control form-group" type="text" id="username" name="username" placeholder="Filter by username">
-            <input class="form-control form-group" type="text" id="problem_id" name="problem_id" placeholder="Filter by problem ID">
-            <input class="form-control form-group" type="text" id="contest_id" name="contest_id" placeholder="Filter by contest ID">
-            <select class="form-control form-group" id="correct" name="correct">
+            <input class="form-control mb-3" type="text" id="username" name="username" placeholder="Filter by username">
+            <input class="form-control mb-3" type="text" id="problem_id" name="problem_id" placeholder="Filter by problem ID">
+            <input class="form-control mb-3" type="text" id="contest_id" name="contest_id" placeholder="Filter by contest ID">
+            <select class="form-control mb-3" id="correct" name="correct">
                 <option value="" selected hidden>Filter by status</option>
                 <option value="">All</option>
                 <option value="AC">AC</option>
