--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -5,7 +5,7 @@
 {% block main %}
 <h1 class="text-center">Forgot Password</h1>
 <form method="post">
-    <input class="form-control form-group" name="email" placeholder="Email Address" type="text" required>
+    <input class="form-control mb-3" name="email" placeholder="Email Address" type="text" required>
     <button class="btn btn-primary" type="submit">Reset Password</button>
     {% if USE_CAPTCHA %}
         <script src="https://hcaptcha.com/1/api.js" async defer></script>
