--- a/templates/admin/contestnotify.html
+++ b/templates/admin/contestnotify.html
@@ -6,8 +6,8 @@
 <h1>Notify Participants</h1>
 <p>This will send an email to all participants in your contest. Use this feature with caution.</p>
 <form autocomplete="off" method="post" id="create" name="create">
-    <input class="form-control form-group" type="text" id="subject" name="subject" placeholder="Subject" required>
-    <textarea class="form-control form-group" id="message" name="message" rows="20" placeholder="Message" required></textarea>
+    <input class="form-control mb-3" type="text" id="subject" name="subject" placeholder="Subject" required>
+    <textarea class="form-control mb-3" id="message" name="message" rows="20" placeholder="Message" required></textarea>
     <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Notify">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
