--- a/templates/admin/createcontest.html
+++ b/templates/admin/createcontest.html
@@ -5,15 +5,15 @@
 {% block main %}
 <h1>Create Contest</h1>
 <form autocomplete="off" method="post" id="create" name="create">
-    <input class="form-control form-group" type="text" id="contest_id" name="contest_id" placeholder="Contest ID" required>
-    <input class="form-control form-group" type="text" id="contest_name" name="contest_name" placeholder="Contest Name" required>
+    <input class="form-control mb-3" type="text" id="contest_id" name="contest_id" placeholder="Contest ID" required>
+    <input class="form-control mb-3" type="text" id="contest_name" name="contest_name" placeholder="Contest Name" required>
     <div style="position: relative;">
-        <textarea class="form-control form-group md-preview" id="description" name="description" rows="20" placeholder="Description" required></textarea>
+        <textarea class="form-control mb-3 md-preview" id="description" name="description" rows="20" placeholder="Description" required></textarea>
         <div id="description-out" class="md-preview"></div>
     </div>
-    <input class="form-control form-group dtl" type="text" id="start" name="start" placeholder="Start Date & Time" required>
-    <input class="form-control form-group dtl" type="text" id="end" name="end" placeholder="End Date & Time" required>
-    <div class="form-control form-group" style="border: 0;">
+    <input class="form-control mb-3 dtl" type="text" id="start" name="start" placeholder="Start Date & Time" required>
+    <input class="form-control mb-3 dtl" type="text" id="end" name="end" placeholder="End Date & Time" required>
+    <div class="form-control mb-3" style="border: 0;">
         <input type="checkbox" id="scoreboard_visible" name="scoreboard_visible">
         <label for="scoreboard_visible">Scoreboard Visible?</label>
     </div>
