--- a/templates/admin/editannouncement.html
+++ b/templates/admin/editannouncement.html
@@ -5,9 +5,9 @@
 {% block main %}
 <h1>Edit Announcement</h1>
 <form autocomplete="off" method="post" id="edit" name="edit">
-    <input class="form-control form-group" type="text" id="name" name="name" placeholder="Name" value="{{ data["name"] }}" required>
+    <input class="form-control mb-3" type="text" id="name" name="name" placeholder="Name" value="{{ data["name"] }}" required>
     <div style="position: relative;">
-        <textarea class="form-control form-group md-preview" id="description" name="description" rows="20" placeholder="Description" required>{{ data["description"] }}</textarea>
+        <textarea class="form-control mb-3 md-preview" id="description" name="description" rows="20" placeholder="Description" required>{{ data["description"] }}</textarea>
         <div id="description-out" class="md-preview"></div>
     </div>
     <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Edit">
