--- a/templates/admin/editcontest.html
+++ b/templates/admin/editcontest.html
@@ -5,13 +5,13 @@
 {% block main %}
 <h1>Edit Contest</h1>
 <form autocomplete="off" method="post" id="edit" name="edit">
-    <input class="form-control form-group" type="text" id="name" name="name" placeholder="Name" value="{{ data['name'] }}" required>
+    <input class="form-control mb-3" type="text" id="name" name="name" placeholder="Name" value="{{ data['name'] }}" required>
     <div style="position: relative;">
-        <textarea class="form-control form-group md-preview" id="description" name="description" rows="20" placeholder="Description" required>{{ data["description"] }}</textarea>
+        <textarea class="form-control mb-3 md-preview" id="description" name="description" rows="20" placeholder="Description" required>{{ data["description"] }}</textarea>
         <div id="description-out" class="md-preview"></div>
     </div>
-    <input class="form-control form-group dtl" type="datetime-local" id="start" name="start" placeholder="Start Date & Time" value="{{ data['start'] }}" required>
-    <input class="form-control form-group dtl" type="datetime-local" id="end" name="end" placeholder="End Date & Time" value="{{ data['end'] }}" required>
+    <input class="form-control mb-3 dtl" type="datetime-local" id="start" name="start" placeholder="Start Date & Time" value="{{ data['start'] }}" required>
+    <input class="form-control mb-3 dtl" type="datetime-local" id="end" name="end" placeholder="End Date & Time" value="{{ data['end'] }}" required>
     <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Edit">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
