--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -5,13 +5,13 @@
 {% block main %}
 <h1>Change Password</h1>
 <form method="post">
-   <div class="form-group">
+   <div class="mb-3">
         <input class="form-control" name="password" placeholder="Current Password" type="password" required>
     </div>
-    <div class="form-group">
+    <div class="mb-3">
         <input class="form-control" name="newPassword" placeholder="New Password" type="password" required>
     </div>
-    <div class="form-group">
+    <div class="mb-3">
         <input class="form-control" name="confirmation" placeholder="Confirmation" type="password" required>
     </div>
     <button class="btn btn-primary" type="submit">Change Password</button>
