--- a/templates/contest/contest.html
+++ b/templates/contest/contest.html
@@ -7,7 +7,7 @@
     <h1 style="display: inline;">{{ title }}</h1>
     {% if scoreboard or session.admin %}
         <div class="dropdown" style="display: inline; margin-left: 4px;">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: -18px;">Actions</button>
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: -18px;">Actions</button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 {% if scoreboard %}
                     <a class="dropdown-item" href="{{ request.path }}/scoreboard">Scoreboard</a>
@@ -24,7 +24,7 @@
 </div>
 <div style="overflow-x: auto;">
     <table class="table table-hover table-full-width">
-        <thead class="thead-dark">
+        <thead class="table-dark">
             <tr>
                 <th scope="col" style="width: 12%;">Status</th>
                 <th scope="col" style="width: 54%;">Name</th>
