--- a/templates/contest/contestscoreboard.html
+++ b/templates/contest/contestscoreboard.html
@@ -6,7 +6,7 @@
 <h1><a href="{{ request.path[:-11] }}">{{ title }}</a> Scoreboard</h1>
 <div style="overflow-x: auto;">
     <table class="table table-hover table-full-width">
-        <thead class="thead-dark">
+        <thead class="table-dark">
             <tr>
                 <th scope="col" style="width: 12%;">Rank</th>
                 <th scope="col" style="width: 40%;">Username</th>
