--- a/templates/contest/draft_problems.html
+++ b/templates/contest/draft_problems.html
@@ -5,7 +5,7 @@
 {% block main %}
 <h1>{{ title }} Draft Problems</h1>
 <table class="table table-hover">
-    <thead class="thead-dark">
+    <thead class="table-dark">
         <tr>
             <th scope="col">Name</th>
             <th scope="col">Category</th>
