--- a/templates/error/maintenance.html
+++ b/templates/error/maintenance.html
@@ -4,11 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" crossorigin="anonymous">
         <link href="/assets/css/style.css" rel="stylesheet">
-
-        <script src="/assets/js/jquery.min.js"></script>
-        <script src="/assets/js/bootstrap.bundle.min.js"></script>
 
         <link href="/static/favicon.png" rel="icon">
 
@@ -17,13 +14,12 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-            <a class="navbar-brand" href="/">{{ CLUB_NAME }}</a>
-            <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">{{ CLUB_NAME }}</a>
+            </div>
         </nav>
 
-        <main class="container p-5">
+        <main class="container">
             <h1>Under Maintenance</h1>
             We are currently undergoing scheduled maintenance. We will be back soon. Thank you for your patience.
         </main>
