--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" crossorigin="anonymous">
         <link href="/assets/css/github-markdown.min.css" rel="stylesheet" media="async" onload="this.media='all'">
         <link href="/assets/css/style.css" rel="stylesheet">
 
@@ -15,43 +15,43 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-            <a class="navbar-brand" href="/">{{ CLUB_NAME }}</a>
-            <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbar">
-                {% if session.user_id %}
-                    <ul class="navbar-nav mr-auto">
-                        <li><a class="nav-link" href="/">Home</a></li>
-                        <li><a class="nav-link" href="/problems">Practice</a></li>
-                        <li><a class="nav-link" href="/contests">Contests</a></li>
-                        {% if session.admin %}
-                            <li><a class="nav-link" href="/admin/console">Admin Console</a></li>
-                        {% endif %}
-                    </ul>
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-link white">Welcome, {{ session.username }}</li>
-                        <li><a class="nav-link" href="/settings">Settings</a></li>
-                        <li><a class="nav-link" href="/logout">Log Out</a></li>
-                    </ul>
-                {% else %}
-                    <ul class="navbar-nav ml-auto">
-                        <li><a class="nav-link" href="/register">Register</a></li>
-                        <li><a class="nav-link" href="/login">Log In</a></li>
-                    </ul>
-                {% endif %}
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">{{ CLUB_NAME }}</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar">
+                    {% if session.user_id %}
+                        <ul class="navbar-nav me-auto">
+                            <li><a class="nav-link" href="/">Home</a></li>
+                            <li><a class="nav-link" href="/problems">Practice</a></li>
+                            <li><a class="nav-link" href="/contests">Contests</a></li>
+                            {% if session.admin %}
+                                <li><a class="nav-link" href="/admin/console">Admin Console</a></li>
+                            {% endif %}
+                        </ul>
+                        <ul class="navbar-nav">
+                            <li class="nav-link white">Welcome, {{ session.username }}</li>
+                            <li><a class="nav-link" href="/settings">Settings</a></li>
+                            <li><a class="nav-link" href="/logout">Log Out</a></li>
+                        </ul>
+                    {% else %}
+                        <ul class="navbar-nav ms-auto">
+                            <li><a class="nav-link" href="/register">Register</a></li>
+                            <li><a class="nav-link" href="/login">Log In</a></li>
+                        </ul>
+                    {% endif %}
+                </div>
             </div>
         </nav>
 
-        <main class="container-md">
+        <main class="container">
             {% with msg = get_flashed_messages(with_categories=True) %}
                 {% if msg %}
                     {% for category, message in msg %}
                         <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
                             {{ message }}
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     {% endfor %}
                 {% endif %}
@@ -60,19 +60,20 @@
         </main>
         <footer>
             <hr>
-            <p class="text-center">© 2020, {{ CLUB_NAME }}. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
+            <p class="text-center">© 2020, {{ CLUB_NAME }}. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>. 
+            <a href="/terms">Terms</a> - <a href="/privacy">Privacy</a></p>
         </footer>
 
         <!-- TODO: Remove jQuery -->
         <script src="/assets/js/jquery.min.js"></script>
         <script src="/assets/js/showdown.min.js"></script>
         <script src="/assets/js/purify.min.js"></script>
-        <script src="/assets/js/bootstrap.bundle.min.js"></script>
         <script src="/assets/js/jquery.twbsPagination.min.js"></script>
         <script src="/assets/js/convertmd.js"></script>
         {% block script %}{% endblock %}
         <script src="/assets/js/dateconvert.js"></script>
         <script src="/assets/js/seemore.js"></script>
         <script src="/assets/js/pagination.js"></script>
+        <script src="/assets/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
