--- a/templates/problem/problem.html
+++ b/templates/problem/problem.html
@@ -52,21 +52,23 @@
     </div>
 </div>
 {% endblock %}
-{% block script %}
-<script>
-    function deletemsg() {
-        $("#confirm").css("display", "")
-                     .find("form")
-                     .attr("action", window.location.pathname + "/delete")
-                     .find(".btn")
-                     .attr("value", "Are you sure you want to delete this problem? Click here to confirm.");
-    }
-    function publishmsg() {
-        $("#confirm").css("display", "")
-                     .find("form")
-                     .attr("action", window.location.pathname + "/publish")
-                     .find(".btn")
-                     .attr("value", "Are you sure you want to publish this problem? Click here to confirm.");
-    }
-</script>
-{% endblock %}
+{% if session["admin"] %}
+    {% block script %}
+    <script>
+        function deletemsg() {
+            $("#confirm").css("display", "")
+                         .find("form")
+                         .attr("action", window.location.pathname + "/delete")
+                         .find(".btn")
+                         .attr("value", "Are you sure you want to delete this problem? Click here to confirm.");
+        }
+        function publishmsg() {
+            $("#confirm").css("display", "")
+                         .find("form")
+                         .attr("action", window.location.pathname + "/publish")
+                         .find(".btn")
+                         .attr("value", "Are you sure you want to publish this problem? Click here to confirm.");
+        }
+    </script>
+    {% endblock %}
+{% endif %}
