--- a/templates/problem/problems.html
+++ b/templates/problem/problems.html
@@ -7,7 +7,7 @@
 <div id="pagination"></div>
 <div style="overflow-x: auto;">
     <table class="table table-hover table-full-width">
-        <thead class="thead-dark">
+        <thead class="table-dark">
             <tr>
                 <th scope="col" style="width: 12%;">Status</th>
                 <th scope="col" style="width: 54%;">Name</th>
