--- a/templates/resetpassword.html
+++ b/templates/resetpassword.html
@@ -5,8 +5,8 @@
 {% block main %}
 <h1 class="text-center">Reset Password</h1>
 <form method="post">
-    <input class="form-control form-group" name="password" placeholder="Password" type="password" required>
-    <input class="form-control form-group" name="confirmation" placeholder="Confirmation" type="password" required>
+    <input class="form-control mb-3" name="password" placeholder="Password" type="password" required>
+    <input class="form-control mb-3" name="confirmation" placeholder="Confirmation" type="password" required>
     <button class="btn btn-primary" type="submit">Reset Password</button>
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
