allow browser auto-passwd-create, better alerts

--- a/src/templates/changepassword.html
+++ b/src/templates/changepassword.html
@@ -6,13 +6,13 @@
 <h1>Change Password</h1>
 <form method="post">
    <div class="mb-3">
-        <input class="form-control" name="password" placeholder="Current Password" type="password" required>
+        <input class="form-control" name="password" placeholder="Current Password" type="password" autocomplete="current-password" required>
     </div>
     <div class="mb-3">
-        <input class="form-control" name="newPassword" placeholder="New Password" type="password" required>
+        <input class="form-control" name="newPassword" placeholder="New Password" type="password" autocomplete="new-password" required>
     </div>
     <div class="mb-3">
-        <input class="form-control" name="confirmation" placeholder="Confirmation" type="password" required>
+        <input class="form-control" name="confirmation" placeholder="Confirmation" type="password" autocomplete="new-password" required>
     </div>
     <button class="btn btn-primary" type="submit">Change Password</button>
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
