--- a/src/templates/resetpassword.html
+++ b/src/templates/resetpassword.html
@@ -5,8 +5,8 @@
 {% block main %}
 <h1 class="text-center">Reset Password</h1>
 <form method="post">
-    <input class="form-control mb-3" name="password" placeholder="Password" type="password" required>
-    <input class="form-control mb-3" name="confirmation" placeholder="Confirmation" type="password" required>
+    <input class="form-control mb-3" name="password" placeholder="Password" type="password" autocomplete="new-password" required>
+    <input class="form-control mb-3" name="confirmation" placeholder="Confirmation" type="password" autocomplete="new-password" required>
     <button class="btn btn-primary" type="submit">Reset Password</button>
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
@@ -16,4 +16,22 @@
     encryption and nobody can see them even if they gain access to the users database, we strongly
     recommend you not to use a password you use elsewhere.<br><br>
 </p>
+{% endblock %}
+{% block script %}
+<script>
+    document.querySelector("form").addEventListener("submit", event => {
+        if (document.querySelector("input[name=password]").value != document.querySelector("input[name=confirmation]").value) {
+            makeAlert("Passwords do not match");
+            event.preventDefault();
+        }
+        if (document.querySelector("input[name=password]").value.length < 8) {
+            makeAlert("Password must be at least 8 characters");
+            event.preventDefault();
+        }
+    });
+
+    function makeAlert(message) {
+        $("main").prepend('<div class="alert alert-danger alert-dismissible fade show" role="alert">' + message + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>')
+    }
+</script>
 {% endblock %}
