--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -60,8 +60,7 @@
         </main>
         <footer>
             <hr>
-            <p class="text-center">© 2020, {{ CLUB_NAME }}. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>. 
-            <a href="/terms">Terms</a> - <a href="/privacy">Privacy</a></p>
+            <p class="text-center">© 2020, {{ CLUB_NAME }}. <a href="https://github.com/jdabtieu/CTFOJ">Source Code</a> - <a href="/terms">Terms of Service</a> - <a href="/privacy">Privacy Policy</a></p>
         </footer>
 
         <!-- TODO: Remove jQuery -->
