--- a/src/templates/admin/createproblem.html
+++ b/src/templates/admin/createproblem.html
@@ -29,15 +29,15 @@
 {% endblock %}
 {% block script %}
 <script>
-    $('#description').bind('input propertychange', function() {
+    document.getElementById('description').oninput = function() {
         var product = converter.makeHtml(this.value);
-        document.getElementById('description-out').innerHTML = product;
-        $('#description').css('height', $('#description-out').css('height'));
-    });
-    $('#hints').bind('input propertychange', function() {
+        document.getElementById("description-out").innerHTML = product;
+        document.getElementById("description").style.height = document.getElementById("description-out").offsetHeight + "px";
+    }
+    document.getElementById('hints').oninput = function() {
         var product = converter.makeHtml(this.value);
-        document.getElementById('hints-out').innerHTML = product;
-        $('#hints').css('height', $('#hints-out').css('height'));
-    });
+        document.getElementById("hints-out").innerHTML = product;
+        document.getElementById("hints").style.height = document.getElementById("hints-out").offsetHeight + "px";
+    }
 </script>
 {% endblock %}
