--- a/src/templates/admin/editannouncement.html
+++ b/src/templates/admin/editannouncement.html
@@ -18,12 +18,12 @@
 <script>
     var product = converter.makeHtml(document.getElementById('description').value);
     document.getElementById('description-out').innerHTML = product;
-    $('#description').css('height', $('#description-out').css('height'));
+    document.getElementById("description").style.height = document.getElementById("description-out").offsetHeight + "px";
 
-    $('#description').bind('input propertychange', function() {
+    document.getElementById('description').oninput = function() {
         var product = converter.makeHtml(this.value);
-        document.getElementById('description-out').innerHTML = product;
-        $('#description').css('height', $('#description-out').css('height'));
-    });
+        document.getElementById("description-out").innerHTML = product;
+        document.getElementById("description").style.height = document.getElementById("description-out").offsetHeight + "px";
+    }
 </script>
 {% endblock %}
