--- a/src/templates/admin/editcontest.html
+++ b/src/templates/admin/editcontest.html
@@ -20,7 +20,7 @@
 <script>
     var product = converter.makeHtml(document.getElementById('description').value);
     document.getElementById('description-out').innerHTML = product;
-    $('#description').css('height', $('#description-out').css('height'));
+    document.getElementById("description").style.height = document.getElementById("description-out").offsetHeight + "px";
 
     document.querySelectorAll(".dtl").forEach(function (e) {
         var split = e.getAttribute("value").split(" ");
@@ -35,11 +35,11 @@
         }
     });
 
-    $('#description').bind('input propertychange', function() {
+    document.getElementById('description').oninput = function() {
         var product = converter.makeHtml(this.value);
-        document.getElementById('description-out').innerHTML = product;
-        $('#description').css('height', $('#description-out').css('height'));
-    });
+        document.getElementById("description-out").innerHTML = product;
+        document.getElementById("description").style.height = document.getElementById("description-out").offsetHeight + "px";
+    }
 
     $("form").submit(function(event) {
         var formStart = $(this).find("#start");
