--- a/src/templates/changepassword.html
+++ b/src/templates/changepassword.html
@@ -20,3 +20,21 @@
 <br>
 <p>Password must be at least 8 characters long.</p>
 {% endblock %}
+{% block script %}
+<script>
+    document.querySelector("form").addEventListener("submit", event => {
+        if (document.querySelector("input[name=newPassword]").value != document.querySelector("input[name=confirmation]").value) {
+            makeAlert("Passwords do not match");
+            event.preventDefault();
+        }
+        if (document.querySelector("input[name=newPassword]").value.length < 8) {
+            makeAlert("Password must be at least 8 characters");
+            event.preventDefault();
+        }
+    });
+
+    function makeAlert(message) {
+        $("main").prepend('<div class="alert alert-danger alert-dismissible fade show" role="alert">' + message + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>')
+    }
+</script>
+{% endblock %}
