--- a/src/templates/resetpassword.html
+++ b/src/templates/resetpassword.html
@@ -31,7 +31,7 @@
     });
 
     function makeAlert(message) {
-        $("main").prepend('<div class="alert alert-danger alert-dismissible fade show" role="alert">' + message + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>')
+        $("main").prepend(`<div class="alert alert-danger alert-dismissible fade show" role="alert">${message}<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>`)
     }
 </script>
 {% endblock %}
