--- a/src/templates/changepassword.html
+++ b/src/templates/changepassword.html
@@ -21,6 +21,7 @@
 <p>Password must be at least 8 characters long.</p>
 {% endblock %}
 {% block script %}
+<script src="/assets/js/jquery.min.js"></script>
 <script>
     document.querySelector("form").addEventListener("submit", event => {
         if (document.querySelector("input[name=newPassword]").value != document.querySelector("input[name=confirmation]").value) {
