--- a/src/templates/admin/users.html
+++ b/src/templates/admin/users.html
@@ -50,29 +50,29 @@
 {% block script %}
 <script>
     function createForm(msg, path, user_id) {
-        $("#confirm").css("display", "");
-        $("#confirm .btn").attr("value", msg)
-        $("#confirm form").attr("action", path);
-        $("#confirm input[name=user_id]").attr("value", user_id);
+        document.getElementById("confirm").style.display = "";
+        document.querySelector("#confirm .btn").setAttribute("value", msg);
+        document.querySelector("#confirm form").setAttribute("action", path);
+        document.querySelector("#confirm input[name=user_id]").setAttribute("value", user_id);
     }
 
     function ban(e) {
-        var username = $(e).parent().parent().find(".username").html();
-        var user_id = $(e).parent().parent().find(".userid").html();
+        var username = e.parentElement.parentElement.querySelector(".username").innerHTML;
+        var user_id = e.parentElement.parentElement.querySelector(".userid").innerHTML;
         var msg = `Are you sure you want to ban/unban ${username}? Click here to confirm.`;
         createForm(msg, "/admin/ban", user_id);
     }
 
     function resetpass(e) {
-        var username = $(e).parent().parent().find(".username").html();
-        var user_id = $(e).parent().parent().find(".userid").html();
+        var username = e.parentElement.parentElement.querySelector(".username").innerHTML;
+        var user_id = e.parentElement.parentElement.querySelector(".userid").innerHTML;
         var msg = `Are you sure you want to reset ${username}'s password? Click here to confirm.`;
         createForm(msg, "/admin/resetpass", user_id);
     }
 
     function admin(e) {
-        var username = $(e).parent().parent().find(".username").html();
-        var user_id = $(e).parent().parent().find(".userid").html();
+        var username = e.parentElement.parentElement.querySelector(".username").innerHTML;
+        var user_id = e.parentElement.parentElement.querySelector(".userid").innerHTML;
         var msg = `Are you sure you want to grant/revoke admin to ${username}? Click here to confirm.`;
         createForm(msg, "/admin/makeadmin", user_id);
     }
