--- a/src/templates/problem/problem.html
+++ b/src/templates/problem/problem.html
@@ -57,18 +57,15 @@
     {% block script %}
     <script>
         function deletemsg() {
-            $("#confirm").css("display", "")
-                         .find("form")
-                         .attr("action", window.location.pathname + "/delete")
-                         .find(".btn")
-                         .attr("value", "Are you sure you want to delete this problem? Click here to confirm.");
+            document.getElementById("confirm").style.display = "";
+            document.querySelector("#confirm form").setAttribute("action", window.location.pathname + "/delete");
+            document.querySelector("#confirm form .btn").setAttribute("value", "Are you sure you want to delete this problem? Click here to confirm.");
         }
+        
         function publishmsg() {
-            $("#confirm").css("display", "")
-                         .find("form")
-                         .attr("action", window.location.pathname + "/publish")
-                         .find(".btn")
-                         .attr("value", "Are you sure you want to publish this problem? Click here to confirm.");
+            document.getElementById("confirm").style.display = "";
+            document.querySelector("#confirm form").setAttribute("action", window.location.pathname + "/publish");
+            document.querySelector("#confirm form .btn").setAttribute("value", "Are you sure you want to publish this problem? Click here to confirm.");
         }
     </script>
     {% endblock %}
