--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -31,12 +31,14 @@
                             {% endif %}
                         </ul>
                         <ul class="navbar-nav">
+                            <li class="nav-link" onclick="toggleDark()">Toggle Dark</li>
                             <li class="nav-link white">Welcome, {{ session.username }}</li>
                             <li><a class="nav-link" href="/settings">Settings</a></li>
                             <li><a class="nav-link" href="/logout">Log Out</a></li>
                         </ul>
                     {% else %}
                         <ul class="navbar-nav ms-auto">
+                            <li class="nav-link" onclick="toggleDark()">Toggle Dark</li>
                             <li><a class="nav-link" href="/register">Register</a></li>
                             <li><a class="nav-link" href="/login">Log In</a></li>
                         </ul>
@@ -65,6 +67,7 @@
         
         <!-- TODO: Remove jQuery -->
         <script src="/assets/js/jquery.min.js"></script>
+        <script src="/assets/js/darkMode.js"></script>
         <script src="/assets/js/showdown.min.js"></script>
         <script src="/assets/js/purify.min.js"></script>
         <script src="/assets/js/jquery.twbsPagination.min.js"></script>
