fix display bug

--- a/src/templates/contest/contests.html
+++ b/src/templates/contest/contests.html
@@ -12,7 +12,7 @@
         <div class="see-more-wrapper">
             <a href="#" class="see-more" style="margin-left: 8px;">See More</a>
         </div>
-        <h3>{{ contest["name"] }}</h3>
+        <h3><a href="/contest/{{ contest["id"] }}">{{ contest["name"] }}</a></h3>
         <p style="margin-bottom: 0;">Start: <span class="dt">{{ contest["start"] }}</span></p>
         <p style="margin-bottom: 0;">End: <span class="dt">{{ contest["end"] }}</span></p>
         <div class="showdown">
