--- a/src/templates/error/maintenance.html
+++ b/src/templates/error/maintenance.html
@@ -27,5 +27,6 @@
             <hr>
             <p class="text-center">© 2020, {{ CLUB_NAME }}. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
         </footer>
+        <script src="/assets/js/darkMode.js"></script>
     </body>
 </html>
