remove jQuery from all templates

--- a/src/templates/changepassword.html
+++ b/src/templates/changepassword.html
@@ -21,7 +21,6 @@
 <p>Password must be at least 8 characters long.</p>
 {% endblock %}
 {% block script %}
-<script src="/assets/js/jquery.min.js"></script>
 <script>
     document.querySelector("form").addEventListener("submit", event => {
         if (document.querySelector("input[name=newPassword]").value != document.querySelector("input[name=confirmation]").value) {
@@ -35,7 +34,9 @@
     });
 
     function makeAlert(message) {
-        $("main").prepend('<div class="alert alert-danger alert-dismissible fade show" role="alert">' + message + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>')
+        var tmp = document.createElement('div');
+        tmp.innerHTML = `<div class="alert alert-danger alert-dismissible fade show" role="alert">${message}<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>`;
+        document.querySelector("main").prepend(tmp.firstChild);
     }
 </script>
 {% endblock %}
