--- a/src/templates/resetpassword.html
+++ b/src/templates/resetpassword.html
@@ -18,7 +18,6 @@
 </p>
 {% endblock %}
 {% block script %}
-<script src="/assets/js/jquery.min.js"></script>
 <script>
     document.querySelector("form").addEventListener("submit", event => {
         if (document.querySelector("input[name=password]").value != document.querySelector("input[name=confirmation]").value) {
@@ -32,7 +31,9 @@
     });
 
     function makeAlert(message) {
-        $("main").prepend(`<div class="alert alert-danger alert-dismissible fade show" role="alert">${message}<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>`)
+        var tmp = document.createElement('div');
+        tmp.innerHTML = `<div class="alert alert-danger alert-dismissible fade show" role="alert">${message}<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>`;
+        document.querySelector("main").prepend(tmp.firstChild);
     }
 </script>
 {% endblock %}
